--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # Frontend Production Environment
 # Point this to your deployed backend URL
-VITE_BACKEND_URL=https://echo-backend.vercel.app
+VITE_BACKEND_URL=https://echo-rglvrsa.vercel.app
