--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,6 +9,10 @@
   },
   "routes": [
     {
+      "src": "/socket.io(.*)",
+      "dest": "/api/socket-io"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/$1",
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
@@ -24,7 +28,7 @@
   ],
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
@@ -36,11 +40,7 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
-        },
-        {
-          "key": "Content-Type",
-          "value": "application/json"
+          "value": "Content-Type, Authorization, X-Requested-With"
         }
       ]
     }
