--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,13 +9,19 @@
   },
   "routes": [
     {
-      "src": "/socket.io(.*)",
-      "dest": "/api/socket-io"
+      "src": "/socket.io/(.*)",
+      "dest": "/api/socket-io-polling?path=$1",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"]
+    },
+    {
+      "src": "/socket.io",
+      "dest": "/api/socket-io-polling",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"]
     },
     {
       "src": "/api/(.*)",
       "dest": "/api/$1",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"]
     },
     {
       "src": "/health",
@@ -36,11 +42,23 @@
         },
         {
           "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
+          "value": "GET, POST, PUT, DELETE, OPTIONS, HEAD, PATCH"
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization, X-Requested-With"
+          "value": "Origin, Content-Type, Accept, Authorization, X-Requested-With, X-Socket-ID"
+        },
+        {
+          "key": "Access-Control-Expose-Headers",
+          "value": "Content-Type, X-Socket-ID"
+        },
+        {
+          "key": "Access-Control-Max-Age",
+          "value": "86400"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
         }
       ]
     }
